tests/compile_fail/invalid_eventheader_name.zig
const tracepoints = @import("linux_tracepoints");

comptime {
    _ = tracepoints.eventheader.EventDefinition(.{
        .name = "invalid;event",
        .level = 4,
    });
}
